--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.0.0-alpha.12",
     "react-native": "0.46.1",
+    "react-native-button": "^2.1.0",
     "react-native-keyboard-spacer": "^0.3.1"
   },
   "devDependencies": {
