--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.46.1",
     "react-native-button": "^2.1.0",
-    "react-native-keyboard-spacer": "^0.3.1"
+    "react-native-keyboard-spacer": "^0.3.1",
+    "react-native-swipeout": "^2.1.3"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
