--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint *.js"
   },
   "dependencies": {
     "react": "16.0.0-alpha.12",
@@ -16,6 +17,8 @@
   "devDependencies": {
     "babel-jest": "20.0.3",
     "babel-preset-react-native": "2.1.0",
+    "eslint": "^3.19.0",
+    "eslint-config-synacor": "^1.0.1",
     "jest": "20.0.4",
     "react-test-renderer": "16.0.0-alpha.12"
   },
