--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native": "0.46.1",
     "react-native-button": "^2.1.0",
     "react-native-keyboard-spacer": "^0.3.1",
+    "react-native-router-flux": "^4.0.0-beta.14",
     "react-native-swipeout": "^2.1.3"
   },
   "devDependencies": {
